sidebar fixes per change request except sidebar overflow

--- a/src/css/legend.css
+++ b/src/css/legend.css
@@ -5,7 +5,6 @@
     bottom: 0;
     left: 0;
     background-color: white;
-    position: absolute;
     z-index: 1;
     width: 300px;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25), 0px -1px 0px rgba(0, 0, 0, 0.1);
